(feat) assign to user route
